--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wawe</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:wght@300;400;700&display=swap"
       rel="stylesheet">
+      <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
+      <link rel="stylesheet" href="css/slick.css">
+      <link rel="stylesheet" href="css/style.css">
 
   </head>
 
@@ -65,19 +64,339 @@
       <div class="header__content">
         <div class="container">
           <div class="header__content-inner">
-            <h1 class="header__title">WAWE</h1>
-            <h4 class="header__subtitle">Школа серфинга на канарских Островах</h4>
+            <p class="header__subtitle">
+              Wawe
+            </p>
+            <h1 class="header__title">
+              Школа серфинга на канарских Островах
+            </h1>
+            <a class="header__icon" href="#">
+              <img src="images/bord.svg" alt="bord icon">
+            </a>
           </div>
-          <a class="header__icon" href="#">
-            <img src="images/bord.svg" alt="bord icon">
-          </a>
         </div>
       </div>
     </header>
 
+    <section class="about" id="about">
+      <div class="container">
+        <div class="about__inner">
+          <h2 class="title about__title">
+            О школе, О серфинге, О канарах
+          </h2>
+          <div class="about__container">
+            <p>
+              Канарские острова не случайно называют европейскими Гавайями – это идеальное место для поклонников
+              серфинга: стабильный
+              теплый ветер круглый год, песчаные пляжи, километры нетронутых просторов и прозрачное море. А настоящей
+              Меккой для
+              серфингистов становится Фуэртевентура – второй по величине остров архипелага.
+            </p>
+            <p>
+              Пока что вы только хотите понять, что такое серфинг, или уже испытали всю прелесть катания на волнах, но
+              желаете поднять
+              свой уровень? Наша школа серфинга сможет предложить обучение для любого уровня подготовки.
+            </p>
+            <p>
+              Именно здесь лучшее в Испании место, в котором можно пройти обучение серфингу. Кроме того, что зимой и
+              осенью сюда
+              приходят огромные атлантические волны, Фуэртевентура может похвастать и множеством мелководных спокойных
+              лагун, отлично
+              подходящих для обучения начинающих серфингистов.
+            </p>
+            <p>
+              Четыре часа увлекательных занятий в день помогут вам уверенно покорять волны, почувствовать себя настоящим
+              серфингистом.
+            </p>
+            <p>
+              Серфинг на Канарских островах доступен круглый год – и волны, и подходящая погода здесь есть всегда.
+              Причем волну,
+              подходящую по уровню, сможет найти и настоящий профи, и новичок. Не случайно считается, что именно это
+              место лучше всего
+              подойдет для обучения здесь возможно без сложностей переходить на новый уровень.
+            </p>
+            <p>
+              Основные достоинства нашей русской школы – высокое качество преподавания и организации занятий,
+              безопасность (все наши
+              клиенты застрахованы в компании Allianz), отличный инвентарь и экипировка (предоставляется на весь курс
+              обучения), в том
+              числе мягкие безопасные доски для начинающих.
+
+            </p>
+            <p>
+              Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге
+              невозможно
+              представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет интересовать
+              одна цель –
+              обучение серфингу.
+            </p>
+            <p>
+              Сначала мы определяем уровень катания и физической подготовки и только потом составляем программу
+              подготовки. И можем
+              заверить, что после того, как закончится обучение, вы не только получите массу великолепных ощущений, но и
+              это уровень
+              поднимется на новую ступень.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="school">
+      <div class="container">
+        <h2 class="title school__title">
+          В ШКОЛЕ ВЫ ПОЛУЧИТЕ
+        </h2>
+        <div class="school__items">
+          <div class="school__item">
+            <div class="school__item-head school__item-head--live">
+              <h3 class="school__item-title">
+                ПРОЖИВАНИЕ
+              </h3>
+            </div>
+            <p class="school__item-text">
+              Наша школа серфинга находится в 100 м от океанского побережья. К услугам гостей открытый бассейн и
+              бесплатный Wi-Fi. Из верхней террасы открывается вид на океан. Расстояние до центра города 15 мин.
+            </p>
+          </div>
+          <div class="school__item">
+            <div class="school__item-head school__item-head--fly">
+              <h3 class="school__item-title">
+                ПЕРЕЛЕТ И<br>
+                СТРАХОВКУ
+              </h3>
+            </div>
+            <p class="school__item-text">
+              Все участники программы застрахованы страховой компанией Allianz.
+              Перелет из Тенерифе до острова Лансароте и обратно входит в стоимость программы
+            </p>
+          </div>
+          <div class="school__item">
+            <div class=" school__item-head school__item-head--study">
+              <h3 class="school__item-title">
+                ОБУЧЕНИЕ И<br>
+                ЭКИПИРОВКУ
+              </h3>
+            </div>
+            <p class="school__item-text">
+              Все оборудование и экипировка известных производителей и предоставляется на весь курс программы.
+              Тренировочный процесс начинается с определения вашего уровня катания
+            </p>
+          </div>
+        </div>
+        <div class="school__inner">
+          <div class="school__info">
+            <div class="school__info-item">
+              <div class="school__info-wawe" style="width: calc(100% - (100% - 85%) *2);">
+                <div class="school__info-percent">85%</div>
+              </div>
+              Приехали второй раз
+            </div>
+            <div class="school__info-item">
+              <div class="school__info-wawe" style="width: calc(100% - (100% - 95%) *2);">
+                <div class="school__info-percent">95%</div>
+              </div>
+              Научились кататься
+            </div>
+            <div class="school__info-item">
+              <div class="school__info-wawe" style="width: calc(100% - (100% - 99%) *2)">
+                <div class="school__info-percent">99%</div>
+              </div>
+              Довольных клиентов
+            </div>
+          </div>
+          <div class="school__info-text">
+            <p>Огромным преимуществом нашей школы является собственная методика обучения. Мы разработали собственный
+              стиль
+              обучения серфингу, который позволяет новичкам максимально быстро встать на доску.
+            </p>
+            <p>
+              Именно наша методика и наши преподаватели позволили нам пройти аттестацию Федерации серфинга Канарских
+              островов - FEDERACIÓN CANARIA DE SURF. Это означает, что наша школа соответствует всем мировым
+              стандартам.
+              Переаттестация производится ежегодно и это позволяет нам всегда стремиться к улучшению обучения.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="teachers" style="background-image: url(images/teachers.jpg);">
+      <div class="container">
+        <div class="teachers__inner">
+          <h2 class="title teachers__title">
+            ПОКОРЯЙ ВЕРШИНЫ
+          </h2>
+          <div class="teachers__text">
+            <p>
+              Преподаватели нашей школы серфинга в числе лучших серферов на Канарских островах. Среди них - чемпион
+              Европы по лонгборду, который с радостью поделится опытом как с новичками, так и более опытными
+              серферами.
+              Все члены преподавательского состава являются сертифицированными членами Федерации серфинга Канарских
+              островов. Некоторые из них знают русский язык, что определенно позиционирует нас как русскую школу
+              серфинга за границей!
+            </p>
+            <p>
+              Весь тренерский состав регулярно участвует в семинарах и курсах повышения квалификации, которые
+              проводятся
+              по всему миру различными известными серф-клубами и федерациями. Поэтому в нашей школе серфинга вы можете
+              быть спокойны: вас обучают лучшие тренеры!
+            </p>
+            <p>
+              Методика обучения серфингу рассчитана как на новичков, на серферов среднего уровня, так и на серферов
+              уровня ТОП. Тренеры находят подход к каждому, несмотря на то, что обучение серфингу в нашей школе
+              производится в группах. Однако, мы предлагаем персональные уроки серфинга - только вы и тренер!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="title gallery__title">
+          ГАЛЕРЕЯ
+        </h2>
+        <div class="gallery__filter-btn">
+          <button class="gallery__btn" data-filter="all" type="button">Все</button>
+          <button class="gallery__btn" data-filter=".category-a" type="button">Туристы</button>
+          <button class="gallery__btn" data-filter=".category-b" type="button">Природа</button>
+          <button class="gallery__btn" data-filter=".category-c" type="button">Профи</button>
+        </div>
+        <div class="gallery__content">
+          <div class="gallery__item mix category-a">
+            <img class="gallery__pic" src="images/gallery/1.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+          <div class="gallery__item mix category-a">
+            <img class="gallery__pic" src="images/gallery/2.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+          <div class="gallery__item mix category-b">
+            <img class="gallery__pic" src="images/gallery/3.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+          <div class="gallery__item mix category-b">
+            <img class="gallery__pic" src="images/gallery/4.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+          <div class="gallery__item mix category-c">
+            <img class="gallery__pic" src="images/gallery/5.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+          <div class="gallery__item mix category-c">
+            <img class="gallery__pic" src="images/gallery/6.jpg" alt="gallery img">
+            <a href="#" class="gallery__link"></a>
+          </div>
+        </div>
+      </div>
+      <button href="#" class="gallery__add" type="button">
+        Показать ЕЩЁ
+      </button>
+      <blockquote class="gallery__blockquote">
+        <div class="gallery__blockquote-info">
+          «Если сомневаешься – иди катайся.»
+          <span class="gallery__blockquote-author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
+        </div>
+      </blockquote>
+      <div class="container">
+        <div class="gallery__video">
+          <a data-fancybox="video-gallery" data-src="https://www.youtube.com/watch?v=z2X2HaTvkl8"
+            class="gallery__video-link">
+            <img src="images/play.png" alt="play icon">
+          </a>
+        </div>
+        <div class="gallery__numbers">
+          <h5 class="gallery__numbers-item">
+            450
+            <span>туристов</span>
+          </h5>
+          <h5 class="gallery__numbers-item">
+            2500
+            <span>часов катания</span>
+          </h5>
+          <h5 class="gallery__numbers-item">
+            10
+            <span>проф. тренеров</span>
+          </h5>
+          <h5 class="gallery__numbers-item">
+            365
+            <span>дней в году</span>
+          </h5>
+        </div>
+      </div>
+    </section>
+
+    <section class="blog">
+      <h2 class="title blog__title">
+        БЛОГ
+      </h2>
+      <div class="slider blog__slider">
+        <div class="slider__wrapper">
+          <div class="slider__item" style="background-image: url(images/slider-bg.jpg);">
+            <div class="slider__container">
+              <a class="slider__link" href="#">
+                <h3 class="slider__title">
+                  ЧТО НЕОБХОДИМО ВЗЯТЬ С СОБОЙ НА СЕРФ ТУР
+                </h3>
+                <p class="slider__text">
+                  ТОП 20 необходимых вещей для комфортного отдыха и обучения
+                </p>
+              </a>
+            </div>
+          </div>
+
+          <div class="slider__item" style="background-image: url(images/slider-bg.jpg);">
+            <div class="slider__container">
+              <a class="slider__link" href="#">
+                <h3 class="slider__title">
+                  ЧТО НЕОБХОДИМО ВЗЯТЬ С СОБОЙ НА СЕРФ ТУР
+                </h3>
+                <p class="slider__text">
+                  ТОП 20 необходимых вещей для комфортного отдыха и обучения
+                </p>
+              </a>
+            </div>
+          </div>
+
+          <div class="slider__item" style="background-image: url(images/slider-bg.jpg);">
+            <div class="slider__container">
+              <a class="slider__link" href="#">
+                <h3 class="slider__title">
+                  ЧТО НЕОБХОДИМО ВЗЯТЬ С СОБОЙ НА СЕРФ ТУР
+                </h3>
+                <p class="slider__text">
+                  ТОП 20 необходимых вещей для комфортного отдыха и обучения
+                </p>
+              </a>
+            </div>
+          </div>
+
+          <div class="slider__item" style="background-image: url(images/slider-bg.jpg);">
+            <div class="slider__container">
+              <a class="slider__link" href="#">
+                <h3 class="slider__title">
+                  ЧТО НЕОБХОДИМО ВЗЯТЬ С СОБОЙ НА СЕРФ ТУР
+                </h3>
+                <p class="slider__text">
+                  ТОП 20 необходимых вещей для комфортного отдыха и обучения
+                </p>
+              </a>
+            </div>
+          </div>
+
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </section>
 
 
-    <script src="js/main.js"></script>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/mixitup.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="js/main.js" defer></script>
   </body>
 
 </html>
